--- a/css/style.css
+++ b/css/style.css
@@ -468,6 +468,31 @@ img {
     margin: 0 auto;
 }
 
+.wrapper__full {
+    max-width: 1262px;
+    margin: 0 auto;
+}
+
+.section__title {
+    font-style: normal;
+    font-weight: 500;
+    font-size: 35px;
+    line-height: 42px;
+    color: #102746;
+    position: relative;
+    padding-bottom: 10px;
+}
+
+.section__title::after {
+    display: block;
+    content: '';
+    width: 253px;
+    height: 3px;
+    background-color: #006DFE;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+}
 
 /* header start */
 
@@ -520,6 +545,7 @@ img {
     background: url(../img/intro_bg.png) no-repeat center;
     background-size: cover;
     padding-top: 263px;
+    padding-bottom: 223px;
 }
 
 .intro__title {
@@ -660,8 +686,114 @@ img {
 }
 
 .benefits__card-more:hover, .benefits__card-more:focus, .benefits__card-more:active {
-    color:#1e6dd4;
+    opacity: .65;
     background: url(../img/svg/arrow.svg) no-repeat right center;
 }
 
 /* benefits end */
+
+
+/* places start */
+
+.places {
+    margin-bottom: 131px;
+}
+
+.places__title {
+    margin-right: 15px;
+}
+
+.places__caption {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-between;
+    margin-bottom: 36px;
+}
+
+.places__view-all {
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 24px;
+    color: #006DFE;
+    text-decoration: none;
+    padding-right: 59px;
+    background: url(../img/svg/arrow.svg) no-repeat right center; 
+}
+
+.places__view-all:hover, .places__view-all:focus, .places__view-all:active {
+    opacity: .65;
+}
+
+.places__cards {
+    display: grid;
+    grid-template-columns: repeat(6, 1fr);
+    grid-gap: 10px;
+
+}
+
+.places__card {
+    position: relative;
+    overflow: hidden;
+}
+
+.places__card:hover .places__card__pic {
+    transform: scale(1.05);
+}
+
+.places__card-title {
+    font-style: normal;
+    font-weight: 700;
+    font-size: 50px;
+    line-height: 60px;
+    color: white;
+    position: absolute;
+    bottom: 27px;
+    left: 29px;
+    z-index: 3;
+}
+
+.places__card-size-lg {
+    grid-column: span 3;
+}
+
+.places__card-size-sm {
+    grid-column: span 2;
+}
+.places__card::after {
+    display: block;
+    content: '';
+    width: 100%;
+    height: 100%;
+    background: rgba(21, 24, 36, 0.4);
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 2;
+}
+
+.places__card__pic {
+    width: 100%;
+    transform: .15s all;
+}
+
+.places__card__pic-size-lg {
+    height: 354px;
+    object-fit: cover;
+}
+
+.places__card__pic-size-sm {
+    height: 283px;
+    object-fit: cover;
+}
+
+.places__card-link {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 4;
+}
+/* places end */
